# flask-react-boilerplate

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  bootstrap.py  console.py  main.py  pyproject.toml  supervisor.conf  webhooks_queue.py
backend/commands/: __init__.py  blockchain.py  webhook.py
backend/config/: blockchain.py  settings.py  webhooks.py
backend/database/: __init__.py  company.py  fresh_data.py  models.py  order.py  token.py  transaction.py  user.py  validations.py  webhook.py
backend/jobs/: __init__.py  send_email.py  send_webhook.py
backend/postman_testing_configs/: FlaskBoilerplate.postman_collection_v2.json
backend/providers/: admin_manager.py  blockchain_utils.py  commands_manager.py  jwt_authentication.py  migration_manger.py  schema_manager.py  security_manager.py  swagger_docs.py
backend/templates/: homepage.html
backend/tests/: order_test.py
backend/version_1/: __init__.py
backend/version_1/resources/: client.py  order.py  payment.py  role.py  transaction.py  user.py
docker/: Dockerfile.frontend  default.conf
docker/ssl/: dhparam.pem  nginx.crt  nginx.csr  nginx.key
frontend/: Dockerfile  package.json
wallets/: .gitignore  Dockerfile  Pipfile  commands.txt  requirements.txt  supervisor.conf
wallets/app/: LICENSE  setup.py  utils.py
wallets/app/api/: api.py
wallets/app/main/: celery.py  database.py  home.py  worker.py
wallets/app/tasks/: __init__.py
wallets/app/wallet/: api.py  configuration.py  contract.py  functions.py  infura.py  transaction.py  utils.py  wallet.py
(+6 files in other folders)
